fit method done

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "#actions = np.array([-80, 80])\n",
     "action_len = 5\n",
     "\n",
-    "policy, policy_pmf = softmax_policy_init(1)\n",
+    "policy_funcs = softmax_policy_init(1) # Returns three function: sample, pmf, params\n",
     "#policy = epsilon_greedy_init(0.50)\n",
     "\n",
     "idle = True\n",
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "external_state = OU_Network(N, K, true_model, theta, dt, sigma)\n",
     "\n",
     "sensory_state = Omniscient_ST(N, K)\n",
-    "action_state = Discounted_gain_soft_horizon_TSAS(N, K, behaviour, poss_actions, idle, action_len, policy, policy_pmf, epsilon, C, knowledge, discount, horizon)\n",
+    "action_state = Discounted_gain_soft_horizon_TSAS(N, K, behaviour, poss_actions, idle, action_len, policy_funcs, epsilon, C, knowledge, discount, horizon)\n",
     "internal_state = Normative_DIS(N, K, prior, prior_sample_size, links, dt, theta, sigma, sample_params=True)\n",
     "\n",
     "agent = Agent(N, sensory_state, internal_state, action_state)\n",
@@ -178,11 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n"
+    "np.inf + 1\n"
    ]
   }
  ],
