added model fitting utilities

--- a/information_gain.ipynb
+++ b/information_gain.ipynb
@@ -169,34 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "internal : ['normative', 'LC_discrete', 'LC_continuous', 'LC_discrete_attention', 'change_discrete', 'change_continuous']\n",
-      "sensory : ['omniscient']\n",
-      "actions : ['tree_search_soft_horizon', 'tree_search_hard_horizon', 'experience_vao']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from methods.import_states import import_states_asdict\n",
-    "from methods.empirical_priors import generate_discrete_empirical_priors\n",
-    "\n",
-    "states_dict = import_states_asdict()\n",
-    "\n",
-    "for k, v in states_dict.items():\n",
-    "    print(k, ':', [vk for vk in v.keys()])"
+    "from methods.empirical_priors import generate_discrete_empirical_priors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +245,7 @@
        "        x: array([3.00000016])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,33 +332,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.015252   0.02383223 0.01263134 0.01688933 0.00808497 0.00408933\n",
-      " 0.00991606 0.0169141  0.001583   0.01581441 0.02293623 0.01417448\n",
-      " 0.00283393 0.02321016 0.02712248 0.01963753 0.02608656 0.02220049\n",
-      " 0.00861806 0.00601513 0.0160108  0.01054667 0.00144193 0.02776365\n",
-      " 0.03352949 0.01613649 0.00143335 0.01470861 0.00100703 0.01409658\n",
-      " 0.02953155 0.0116397  0.01586527 0.01286985 0.01554126 0.02111502\n",
-      " 0.00948534 0.03287859 0.02035576 0.01735152 0.0034863  0.01665473\n",
-      " 0.01049026 0.02746149 0.00238106 0.03020939 0.0139851  0.00986283\n",
-      " 0.02123057 0.03096103 0.01665781 0.02424336 0.01103035 0.02600477\n",
-      " 0.01613647 0.0277127  0.02491013 0.00551112 0.01011866 0.00194567\n",
-      " 0.01541981 0.00377606 0.00795396 0.0207061 ]\n",
+      "[0.01648143 0.00956867 0.01328395 0.01313246 0.00995049 0.0111141\n",
+      " 0.01539089 0.00805754 0.02292291 0.01396755 0.01996233 0.00286779\n",
+      " 0.01935055 0.00048263 0.01875713 0.02378083 0.0031237  0.01602571\n",
+      " 0.01078962 0.00070722 0.0034946  0.00841051 0.02840901 0.00668134\n",
+      " 0.01632992 0.02702465 0.00695431 0.02393684 0.00965268 0.01552803\n",
+      " 0.00953941 0.00506618 0.00956533 0.00027505 0.02728366 0.0300911\n",
+      " 0.00067262 0.02715504 0.01599612 0.00188286 0.02113233 0.02503498\n",
+      " 0.01359778 0.01970972 0.02106606 0.02274357 0.01609457 0.01948026\n",
+      " 0.02418622 0.02742701 0.01677066 0.01065319 0.02398747 0.0130515\n",
+      " 0.02817733 0.01728877 0.01511368 0.02380612 0.00379339 0.01276463\n",
+      " 0.02561047 0.02062629 0.02915287 0.02506435]\n",
       "(64, 6)\n",
-      "[[0.47568768 0.52431232]\n",
-      " [0.49491532 0.50508468]\n",
-      " [0.54573231 0.45426769]\n",
-      " [0.51090374 0.48909626]\n",
-      " [0.49698851 0.50301149]\n",
-      " [0.43306687 0.56693313]]\n",
-      "[0.00144193]\n"
+      "[[0.41074497 0.58925503]\n",
+      " [0.49085231 0.50914769]\n",
+      " [0.44908518 0.55091482]\n",
+      " [0.49828395 0.50171605]\n",
+      " [0.50488189 0.49511811]\n",
+      " [0.51659348 0.48340652]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -390,12 +383,13 @@
     "model = np.array([-1, 1, -1, 1, 1, -1])\n",
     "\n",
     "model_idx = np.where((space == model).all(axis=1))[0]\n",
-    "print(m[model_idx])"
+    "\n",
+    "(space == model).all(axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -410,10 +404,10 @@
     {
      "data": {
       "text/plain": [
-       "0.013969889743927436"
+       "0.012052037782613503"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +598,7 @@
        "[15625 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,31 +628,6 @@
     "df2['judgement_1 '] = df2[links[0]] == a\n",
     "df2\n",
     "#df2[df2[links[0]] == a | df2[links[1]] == a | df2[links[2]] == a | df2[links[3]] == a | df2[links[4]] == a | df2[links[5]] == a]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1200 15625\n",
-      "18750000\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(i, j)\n",
-    "print(i*j)\n",
-    "a = np.random.rand(i*j)\n",
-    "#a = np.zeros(i*j)\n",
-    "a = a.reshape((i, j))\n",
-    "\n",
-    "np.savetxt('./data/param_fitting_outputs/test.csv', a, delimiter=',')"
    ]
   }
  ],
