fitted plots done

--- a/information_gain.ipynb
+++ b/information_gain.ipynb
@@ -629,6 +629,204 @@
     "df2\n",
     "#df2[df2[links[0]] == a | df2[links[1]] == a | df2[links[2]] == a | df2[links[3]] == a | df2[links[4]] == a | df2[links[5]] == a]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Prior initialisation\n",
+    "def softmax(dist, temp):\n",
+    "    dist_softmax_unnorm = np.exp(dist * temp)\n",
+    "    if len(dist_softmax_unnorm.shape) == 1:\n",
+    "        return dist_softmax_unnorm / dist_softmax_unnorm.sum()\n",
+    "    else:\n",
+    "        return dist_softmax_unnorm / dist_softmax_unnorm.sum(axis=1, keepdims=1)\n",
+    "\n",
+    "def generate_prior_from_judgement(K, L, prior_judgement, temperature):\n",
+    "\n",
+    "    if type(prior_judgement) == np.ndarray:\n",
+    "        prior_j = prior_judgement  \n",
+    "        temp = temperature  \n",
+    "    else:\n",
+    "        prior_j = np.zeros(K**2 - K)\n",
+    "        temp = 100\n",
+    "    p_unnormalised = np.zeros((prior_j.size, L.size))\n",
+    "    for i in np.arange(prior_j.size):\n",
+    "        v = prior_j[i]\n",
+    "        indices = np.arange(L.size)\n",
+    "        # Computes an a array with negative absolute distance from the judgement\n",
+    "        p_unnormalised[i,:] = L.size - np.abs(indices - np.argmin(np.abs(L - v)))\n",
+    "    # Normalises the exponential of the distance times the temperature parameter\n",
+    "    p = softmax(p_unnormalised, temp)\n",
+    "    # Return the probability distribution and the entropy of the distribution\n",
+    "    return p\n",
+    "\n",
+    "def build_space(K, links):\n",
+    "    a = links \n",
+    "    c = len(links)\n",
+    "    s = K**2 - K\n",
+    "    S = np.zeros((c**s, s))\n",
+    "    for i in range(s):\n",
+    "        ou = np.tile(a, (int(c**(s-i-1)), 1)).flatten('F')\n",
+    "        os = tuple(ou for _ in range(c**i))\n",
+    "        o = np.concatenate(os)\n",
+    "        S[:, i] = o.T\n",
+    "    \n",
+    "    return S\n",
+    "\n",
+    "def gen_prior_w_space(space, prior, temp):\n",
+    "    dists = ((space - prior)**2).sum(axis=1)**(1/2)\n",
+    "    norm_dist = 1 - dists / dists.max()\n",
+    "    \n",
+    "    softmax_dist = softmax(norm_dist, temp)\n",
+    "\n",
+    "    return softmax_dist\n",
+    "\n",
+    "def entropy(dist):\n",
+    "    return - np.sum(dist * np.log(dist))\n",
+    "\n",
+    "\n",
+    "def models_to_links(K, links, indexed_space, models_probs):\n",
+    "    s = K**2 - K\n",
+    "    num_links = links.size\n",
+    "    links_probs = np.zeros((s, num_links))\n",
+    "    for j in range(s):\n",
+    "        for k in range(num_links):\n",
+    "            links_probs[j, k] = np.sum(models_probs[indexed_space[:,j] == k])\n",
+    "            \n",
+    "    return links_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01165623, 0.03168492, 0.08612854, 0.23412166, 0.63640865],\n",
+       "       [0.06745081, 0.1833503 , 0.49839779, 0.1833503 , 0.06745081],\n",
+       "       [0.06745081, 0.1833503 , 0.49839779, 0.1833503 , 0.06745081],\n",
+       "       [0.19151597, 0.52059439, 0.19151597, 0.07045479, 0.02591887],\n",
+       "       [0.01165623, 0.03168492, 0.08612854, 0.23412166, 0.63640865],\n",
+       "       [0.63640865, 0.23412166, 0.08612854, 0.03168492, 0.01165623]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K = 3\n",
+    "L = np.array([-1, -1/2, 0, 1/2, 1])\n",
+    "L_index = np.arange(L.size)\n",
+    "\n",
+    "prior = np.array([1, 0, 0, -1/2, 1, -1])\n",
+    "\n",
+    "temp = 1\n",
+    "\n",
+    "generate_prior_from_judgement(K, L, prior, temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space = build_space(K, L)\n",
+    "\n",
+    "indexed_space = build_space(K, L_index)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "prior = np.array([1, 0, 0, -1/2, 1, -1])\n",
+    "\n",
+    "temp = 100\n",
+    "\n",
+    "dist = gen_prior_w_space(space, prior, temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0005105308186840136"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entropy(dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.29884189e-21, 1.87248414e-16, 2.58882919e-11, 4.30928969e-06,\n",
+       "        9.99995691e-01],\n",
+       "       [2.45222472e-11, 4.28215590e-06, 9.99991436e-01, 4.28215590e-06,\n",
+       "        2.45222472e-11],\n",
+       "       [2.45222472e-11, 4.28215590e-06, 9.99991436e-01, 4.28215590e-06,\n",
+       "        2.45222472e-11],\n",
+       "       [4.28215718e-06, 9.99991436e-01, 4.28215718e-06, 2.45232685e-11,\n",
+       "        1.66426902e-16],\n",
+       "       [1.29884189e-21, 1.87248414e-16, 2.58882919e-11, 4.30928969e-06,\n",
+       "        9.99995691e-01],\n",
+       "       [9.99995691e-01, 4.30928969e-06, 2.58882919e-11, 1.87248414e-16,\n",
+       "        1.29884189e-21]])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_to_links(K, L, indexed_space, dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
