updated attention, set up high level wrappers

--- a/recovery_analysis.ipynb
+++ b/recovery_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./data/model_fitting_outputs/summary_data_run.csv')\n",
+    "df = pd.read_csv('./data/model_fitting_outputs/summary_data_fit_true.csv')\n",
     "\n",
     "\n",
     "def calc_accuracy(ground_truth_str, MAP_str):\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
     "lc_att_df[lc_att_df.experiment == 'experiment_2'].to_csv('/mnt/c/Users/vbtes/CompProjects/vbtCogSci/csl_global_analysis/data/simulated_data/lc_att_lf_2.csv')\n",
     "lc_att_df[lc_att_df.experiment == 'experiment_3'].to_csv('/mnt/c/Users/vbtes/CompProjects/vbtCogSci/csl_global_analysis/data/simulated_data/lc_att_lf_3.csv')\n",
     "\n",
-    "# LC att\n",
+    "# Change\n",
     "change_df = df[df.model_name == 'change_d_obs_fk_&_att_cha'][cols].rename({'pid': 'participant'}, axis=1)\n",
     "change_df = change_df[change_df.scenario.isin(['crime', 'estate', 'finance'])]\n",
     "change_df[change_df.experiment == 'experiment_2'].to_csv('/mnt/c/Users/vbtes/CompProjects/vbtCogSci/csl_global_analysis/data/simulated_data/change_lf_2.csv')\n",
